--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@rgossiaux/svelte-headlessui": "^1.0.0-beta.12",
-    "@smui/card": "^6.0.0-beta.15",
     "@sveltejs/adapter-auto": "next",
     "@sveltejs/kit": "next",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
@@ -36,6 +34,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
+    "@rollup/plugin-alias": "^3.1.9",
+    "gh-pages": "^3.2.3",
     "svelte-fa": "^2.4.0",
     "uuidv4": "^6.2.12"
   }
