--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "prettier-plugin-svelte": "^2.5.0",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.6",
+    "svelte-dnd-action": "^0.9.17",
     "svelte-preprocess": "^4.10.1",
     "tailwindcss": "^3.0.23",
     "tslib": "^2.3.1",
