--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@rollup/plugin-alias": "^3.1.9",
+    "@sveltejs/adapter-node": "^1.0.0-next.73",
     "gh-pages": "^3.2.3",
     "svelte-fa": "^2.4.0",
     "uuidv4": "^6.2.12"
