--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@rollup/plugin-alias": "^3.1.9",
     "@sveltejs/adapter-node": "^1.0.0-next.73",
     "gh-pages": "^3.2.3",
+    "html2canvas": "^1.4.1",
     "svelte-fa": "^2.4.0",
     "uuidv4": "^6.2.12"
   }
