--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.0",
     "@rollup/plugin-alias": "^3.1.9",
     "@sveltejs/adapter-node": "^1.0.0-next.73",
+    "dom-to-image": "^2.6.0",
     "gh-pages": "^3.2.3",
-    "html2canvas": "^1.4.1",
     "svelte-copy-to-clipboard": "^0.2.5",
     "svelte-fa": "^2.4.0",
     "svelte-particles": "^1.42.4",
