--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,6 @@
 {
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "tailwindConfig": "./tailwind.config.cjs",
+  "plugins": ["prettier-plugin-tailwindcss"],
 }
